--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="idees">
         <h2> Idées de desserts de Noël</h2>
         <ul>
-            <li><a href="D:\BUT1_S1\WEB\projet_perso\buche\buche.html">Bûche de Noël au chocolat</a>.</li>
+            <li><a href="buche.html">Bûche de Noël au chocolat</a>.</li>
             <li> Sablés de Noël</li>
             <li> Pain d’épices</li>
             <li> Truffes au chocolat</li>
@@ -97,4 +97,5 @@
     </footer>
 
 </body>
+
 </html>
